<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="400dp"
    android:background="#FF5D00">

<LinearLayout
    android:orientation="vertical"
    android:layout_height="390dp"
    android:layout_width="290dp"
    android:layout_gravity="center"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginLeft="5dp"
    android:background="#C0C0C0">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtPopupTitle"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:textSize="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtPopupVer"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtPopupAutor2"
        android:id="@+id/textView4"
        android:layout_gravity="center_horizontal" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtPopupMail"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtPopupContent"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:textSize="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/txtPopupContent2"
        android:id="@+id/textView5"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtBtnPopup"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
</LinearLayout>