<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/bacground_dark">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/title_background">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:id="@+id/imageView"
            android:background="@drawable/lgicon"
            android:layout_centerVertical="true"
            android:contentDescription="imgLG" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="fill_parent"
            android:text="@string/txtMain"
            android:id="@+id/textView"
            android:layout_weight="0"
            android:textSize="15dp"
            android:textStyle="italic"
            android:layout_toRightOf="@+id/imageView"
            android:gravity="center_vertical"/>

        <Button
            android:id="@+id/button"
            android:background="@drawable/info"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/linlaHeaderProgress"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/txtProgressTxt"
            android:id="@+id/txtProgress"
            android:layout_weight="0"
            android:textSize="15dp"
            android:gravity="center"
            android:layout_centerHorizontal="true"/>
        <ProgressBar
            android:id="@+id/pbHeaderProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </ProgressBar>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linlaProgBtn"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/txtProgressReload"
            android:id="@+id/txtProgressReload"
            android:layout_weight="0"
            android:textSize="15dp"
            android:gravity="center"
            android:layout_centerHorizontal="true"/>
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/btnReloadLayout"
            android:text="@string/txtBtnReload"
        />

    </LinearLayout>
    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        />
</LinearLayout>