<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdActivity"
    tools:ignore="MergeRootFrame">

        <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#808080">


            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/title_background">
                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:id="@+id/imageView"
                    android:background="@drawable/lgicon"
                    android:layout_centerVertical="true"
                    android:contentDescription="imgLG" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="fill_parent"
                    android:text="@string/txtLabelSecond"
                    android:id="@+id/textViewtitle"
                    android:layout_weight="0"
                    android:textSize="15dp"
                    android:textStyle="italic"
                    android:layout_toRightOf="@+id/imageView"
                    android:gravity="center_vertical"/>

                <Button
                    android:id="@+id/button"
                    android:background="@drawable/home_white"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"/>
                <Button
                    android:layout_height="45dp"
                    android:layout_width="45dp"
                    android:id="@+id/buttonback"
                    android:background="@drawable/backarrow"
                    android:layout_toLeftOf="@+id/button"
                    android:layout_marginTop="2dp"/>

            </RelativeLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                    <LinearLayout
                        android:id="@+id/linlaHeaderProgress"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center"
                        android:orientation="vertical">
                        <!--android:visibility="gone"-->
                        <TextView
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:text="@string/txtProgressTxt"
                            android:id="@+id/txtProgress"
                            android:layout_weight="0"
                            android:textSize="15dp"
                            android:gravity="center"
                            android:layout_centerHorizontal="true"/>
                        <ProgressBar
                            android:id="@+id/pbHeaderProgress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" >
                        </ProgressBar>

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/linlaProgBtn"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:visibility="gone">
                        <TextView
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:text="@string/txtProgressReload"
                            android:id="@+id/txtProgressReload"
                            android:layout_weight="0"
                            android:textSize="15dp"
                            android:gravity="center"
                            android:layout_centerHorizontal="true"/>
                        <Button
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:id="@+id/btnReloadLayout"
                            android:text="@string/txtBtnReload"
                            />

                    </LinearLayout>
                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="30dp"
                        android:text="@string/txtPrayer"
                        android:id="@+id/textView"
                        android:layout_weight="0"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="15dp"
                        android:textColor="#ffffff"
                        android:textStyle="italic" />
                    <WebView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/webView"/>
            </LinearLayout>
        </LinearLayout>
</FrameLayout>

